fixed hamburger menu overflow bug

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,8 +7,9 @@
 .hamburger-menu {
   background-color: $c-blue-dark;
   width: 100%;
-  // height: calc(100% - 6.4rem);
-  padding: 2.4rem 2.4rem;
+  margin-top: 2.4rem;
+  padding: 0 2.4rem;
+  padding-bottom: 4.8rem; // why?
 
   position: fixed;
   left: 0;
@@ -34,7 +35,6 @@
       height: 100%;
       display: flex;
       align-items: center;
-      gap: 2.5rem;
     }
   }
 }
@@ -45,6 +45,7 @@
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
+  margin-right: 2.5rem;
 
   &--mercury {
     background-color: $c-mercury;
